# home-security

./: .env.example  .gitignore  README.md  add_person.py  main.py  pyproject.toml
docs/: architecture.excalidraw
frontend/: package-lock.json
frontend/src/: App.jsx  LoginPage.css  LoginPage.jsx  ManageFacesPage.css  ManageFacesPage.jsx  RegisterModal.css  RegisterModal.jsx  index.css  main.jsx
frontend/src/contexts/: AuthContext.jsx
scripts/: set_password.py
src/: config.py
src/alerts/: base.py  console.py  telegram.py
src/api/: auth.py  inference.py  pose.py  state.py
src/api/routers/: auth_router.py  faces.py  register.py  stream.py
src/camera/: base.py  stream.py  tapo.py  webcam.py
src/recognition/: face_ops.py
