[project]
name = "home-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "insightface>=0.7.3",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.3",
    "opencv-contrib-python>=4.13.0.92",
    "uvicorn>=0.41.0",
]

[tool.uv.workspace]
members = [
    "insightface-0.7.3",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = ["E501"] # Line length (handled by ruff format)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
